Redo device key handling
