# server-openapi.yaml
@@ -18,6 +18,8 @@ tags:
     description: DeviceType endpoints
   - name: Device
     description: All about the devices in the field
+  - name: DeviceKey
+    description: Keys used for device backend communication
   - name: Firmware
     description: Firmware endpoints
   - name: DeviceTypeFirmware
@@ -77,6 +79,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -161,6 +170,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -254,6 +270,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -338,6 +361,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -367,6 +397,172 @@ paths:
                 $ref: '#/components/schemas/Device'
         '404':
           description: Device not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalError"
+  /device/{device_id}/key:
+    get:
+      tags:
+        - DeviceKey
+      security:
+        - api_key: []
+      summary: List all keys of the device
+      operationId: listDeviceKeys
+      parameters:
+        - name: device_id
+          in: path
+          description: ID of the Devicefor which the keys shall be fetched
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeviceKey'
+        '404':
+          description: Device not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalError"
+    post:
+      tags:
+        - DeviceKey
+      security:
+        - api_key: []
+      summary: Create a new key for the device
+      operationId: createDeviceKey
+      parameters:
+        - name: device_id
+          in: path
+          description: ID of the Device for which the key shall be created
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewDeviceKey'
+      responses:
+        '201':
+          description: Device type created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeviceKey'
+        '404':
+          description: Device not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '409':
+          description: Key with state "NEXT" already present on device
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
+        '500':
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalError"
+  /device/{device_id}/key/{id}:
+    get:
+      tags:
+        - DeviceKey
+      security:
+        - api_key: []
+      summary: Get device key
+      operationId: getDeviceKey
+      parameters:
+        - name: device_id
+          in: path
+          description: ID of the Device which the key belongs to
+          required: true
+          schema:
+            type: integer
+        - name: id
+          in: path
+          description: ID of the DeviceKey to be returned
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeviceType'
+        '404':
+          description: Device type not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalError"
+    delete:
+      tags:
+        - DeviceKey
+      security:
+        - api_key: []
+      summary: Delete device key
+      operationId: deleteDeviceKey
+      parameters:
+        - name: device_id
+          in: path
+          description: ID of the Device which the key belongs to
+          required: true
+          schema:
+            type: integer
+        - name: id
+          in: path
+          description: ID of the DeviceKey to be deleted
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeviceType'
+        '404':
+          description: Device type not found
           content:
             application/json:
               schema:
@@ -432,6 +628,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -663,6 +866,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        '422':
+          description: Input data could not be parsed
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Parse error description
         '500':
           description: Internal error
           content:
@@ -820,6 +1030,47 @@ components:
         - firmware
         - desired_firmware
         - status
+    KeyType:
+      type: string
+      enum: ["LIGHTWEIGHT"]
+    LightweightKeyAlgorithm:
+      type: string
+      enum: ["AES_GCM", "ASCON_AEAD128"]
+    LightweightKeyDetails:
+      type: object
+      properties:
+        algorithm:
+          $ref: '#/components/schemas/LightweightKeyAlgorithm'
+        key:
+          type: string
+          format: byte
+          examples: ["RklSTVVQUyBydWxlcw=="]
+          description: Base64 encoded key matching the selected algorithm.
+      required:
+        - algorithm
+        - key
+    NewDeviceKey:
+      type: object
+      properties:
+        key_type:
+          $ref: '#/components/schemas/KeyType'
+        details:
+          $ref: '#/components/schemas/LightweightKeyDetails'
+      required:
+        - key_type
+        - details
+    DeviceKey:
+      type: object
+      properties:
+        id:
+          type: integer
+        key_type:
+          $ref: '#/components/schemas/KeyType'
+        details:
+          $ref: '#/components/schemas/LightweightKeyDetails'
+      required:
+        - key_type
+        - details
     NewFirmware:
       type: object
       properties:
