# src/api/rest/mod.rs
@@ -1,19 +1,22 @@
-use aes_gcm::Error;
 use axum::Json;
 use axum::http::StatusCode;
 use axum::response::{Html, IntoResponse};
-use log::{error, info};
+use log::{error, info, warn};
 use serde::Serialize;
+use std::fmt;
 use std::path::PathBuf;
 use std::{net::SocketAddr, sync::Arc};
+use thiserror::Error;
 use tokio::net::TcpListener;
 use tokio::signal;
 use uuid::Uuid;
 
 mod device;
+mod device_key;
 mod device_type;
 mod device_type_firmware;
 mod firmware;
+mod serde_helpers;
 
 #[derive(Clone)]
 pub struct RestApiConfig {
@@ -21,6 +24,7 @@ pub struct RestApiConfig {
     pub shared_pool: Arc<crate::DbPool>,
     pub max_firmware_size: usize,
     pub data_storage_location: PathBuf,
+    pub api_key: String,
 }
 
 pub struct RestApi {
@@ -28,16 +32,26 @@ pub struct RestApi {
     router: axum::Router,
 }
 
-#[derive(Serialize)]
-struct InternalErrorBody {
+#[derive(Serialize, Debug)]
+pub struct InternalErrorBody {
     error_id: String,
 }
 
-#[derive(Serialize)]
-struct ErrorBody {
+#[derive(Serialize, Debug)]
+pub struct ErrorBody {
     error: String,
 }
 
+#[derive(Error, Debug)]
+pub enum TransactionError {
+    #[error(transparent)]
+    Db(#[from] diesel::result::Error),
+
+    #[error(transparent)]
+    Api(#[from] ApiError),
+}
+
+#[derive(Error, Debug)]
 pub enum ApiError {
     Client {
         status: StatusCode,
@@ -49,11 +63,71 @@ pub enum ApiError {
     },
 }
 
+impl fmt::Display for ApiError {
+    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
+        match self {
+            ApiError::Client { body, .. } => write!(f, "{body}"),
+            ApiError::Internal { body, .. } => write!(f, "{body}"),
+        }
+    }
+}
+
+impl fmt::Display for ErrorBody {
+    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
+        write!(f, "error: {}", self.error)
+    }
+}
+impl fmt::Display for InternalErrorBody {
+    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
+        write!(f, "error_id: {}", self.error_id)
+    }
+}
+
 impl IntoResponse for ApiError {
     fn into_response(self) -> axum::response::Response {
         match self {
             ApiError::Client { status, body } => (status, Json(body)).into_response(),
             ApiError::Internal { status, body } => (status, Json(body)).into_response(),
+        }
+    }
+}
+
+async fn api_key_mw(
+    axum::extract::State(state): axum::extract::State<RestApiConfig>,
+    mut req: axum::http::Request<axum::body::Body>,
+    next: axum::middleware::Next,
+) -> axum::response::Response {
+    let unauthorized = || {
+        (
+            StatusCode::UNAUTHORIZED,
+            [("www-authenticate", r#"ApiKey realm="api""#)],
+            "missing or invalid x-api-key",
+        )
+            .into_response()
+    };
+
+    let key = req.headers().get("x-api-key").and_then(|v| v.to_str().ok());
+    match key {
+        Some(k) if state.api_key == k => next.run(req).await,
+        _ => {
+            let peer_opt: Option<SocketAddr> = req
+                .extensions()
+                .get::<axum::extract::ConnectInfo<SocketAddr>>()
+                .map(|ci| ci.0);
+            if let Some(peer) = peer_opt {
+                warn!(
+                    "unauthorized access to endpoint \"{}\" from \"{:?}\"",
+                    req.uri().path().to_string(),
+                    peer
+                );
+            } else {
+                warn!(
+                    "unauthorized access to endpoint \"{}\"",
+                    req.uri().path().to_string()
+                );
+            }
+
+            unauthorized()
         }
     }
 }
@@ -87,6 +161,22 @@ impl RestApi {
             .route("/device/{id}", axum::routing::get(device::get_device))
             .route("/device/{id}", axum::routing::patch(device::update_device))
             .route("/device/{id}", axum::routing::delete(device::delete_device))
+            .route(
+                "/device/{id}/key",
+                axum::routing::get(device_key::list_device_keys),
+            )
+            .route(
+                "/device/{id}/key",
+                axum::routing::post(device_key::create_device_key),
+            )
+            .route(
+                "/device/{id}/key/{id}",
+                axum::routing::get(device_key::get_device_key),
+            )
+            .route(
+                "/device/{id}/key/{id}",
+                axum::routing::delete(device_key::delete_device_key),
+            )
             .route("/firmware", axum::routing::get(firmware::list_firmwares))
             .route(
                 "/firmware",
@@ -123,7 +213,11 @@ impl RestApi {
                 "/device_type_firmware/{id}",
                 axum::routing::delete(device_type_firmware::delete_device_type_firmware),
             )
-            .with_state(config.clone());
+            .with_state(config.clone())
+            .layer(axum::middleware::from_fn_with_state(
+                config.clone(),
+                api_key_mw,
+            )); // apply globally
         RestApi {
             config: config,
             router: router,
@@ -137,13 +231,18 @@ impl RestApi {
             self.config.listen_address.ip(),
             self.config.listen_address.port()
         );
-        axum::serve(tcp, self.router.clone().into_make_service())
-            .with_graceful_shutdown(async {
-                let _ = signal::ctrl_c().await;
-                info!("CTRL+C received; shutting down");
-            })
-            .await
-            .unwrap();
+        axum::serve(
+            tcp,
+            self.router
+                .clone()
+                .into_make_service_with_connect_info::<SocketAddr>(),
+        )
+        .with_graceful_shutdown(async {
+            let _ = signal::ctrl_c().await;
+            info!("CTRL+C received; shutting down");
+        })
+        .await
+        .unwrap();
     }
 }
 
