# src/db/models.rs
@@ -3,15 +3,17 @@ use diesel::prelude::*;
 
 use diesel_derive_enum::DbEnum;
 
-#[derive(Debug, Clone, Copy, PartialEq, Eq, DbEnum)]
+#[derive(Debug, Clone, Copy, PartialEq, Eq, DbEnum, serde::Serialize, serde::Deserialize)]
 #[ExistingTypePath = "crate::db::schema::sql_types::CryptoAlgorithm"]
 pub enum CryptoAlgorithm {
     /// Maps to the Postgres enum label 'AES-GCM'
     #[db_rename = "AES-GCM"]
+    #[serde(rename = "AES_GCM")]
     AesGcm,
 
     /// Maps to the Postgres enum label 'ASCON-AEAD128'
     #[db_rename = "ASCON-AEAD128"]
+    #[serde(rename = "ASCON_AEAD128")]
     AsconAead128,
 }
 
@@ -27,12 +29,15 @@ pub enum DeviceStatus {
     MAINTENANCE = 2,
 }
 
-#[derive(Debug, Clone, Copy, PartialEq, Eq, DbEnum)]
+#[derive(Debug, Clone, Copy, PartialEq, Eq, DbEnum, serde::Serialize, serde::Deserialize)]
 #[ExistingTypePath = "crate::db::schema::sql_types::KeyStatus"]
 #[DbValueStyle = "snake_case"]
 pub enum KeyStatus {
+    #[db_rename = "ACTIVE"]
     ACTIVE,
+    #[db_rename = "NEXT"]
     NEXT,
+    #[db_rename = "EXPIRED"]
     EXPIRED,
 }
 
@@ -40,7 +45,9 @@ pub enum KeyStatus {
 #[ExistingTypePath = "crate::db::schema::sql_types::KeyType"]
 #[DbValueStyle = "snake_case"]
 pub enum KeyType {
+    #[db_rename = "LIGHTWEIGHT"]
     LIGHTWEIGHT,
+    #[db_rename = "TLS"]
     TLS,
 }
 
@@ -109,16 +116,15 @@ pub struct DeviceKey {
     pub device: i32,
     pub key_type: KeyType,
     pub status: KeyStatus,
-    pub key_details_id: i32,
 }
 
 #[derive(Debug, Clone, Insertable)]
 #[diesel(table_name = crate::db::schema::device_key)]
+#[diesel(belongs_to(Device, foreign_key = device))]
 pub struct NewDeviceKey {
     pub device: i32,
     pub key_type: KeyType,
     pub status: KeyStatus,
-    pub key_details_id: i32,
 }
 
 // device_parameter
@@ -242,7 +248,17 @@ pub struct NewFirmware {
 }
 
 // lightweight_key_details
-#[derive(Debug, Clone, Identifiable, Queryable, Selectable, Associations, AsChangeset)]
+#[derive(
+    Debug,
+    Clone,
+    Identifiable,
+    Queryable,
+    Selectable,
+    Associations,
+    AsChangeset,
+    serde::Serialize,
+    serde::Deserialize,
+)]
 #[diesel(table_name = crate::db::schema::lightweight_key_details)]
 #[diesel(belongs_to(DeviceKey, foreign_key = device_key))]
 pub struct LightweightKeyDetails {
@@ -252,8 +268,9 @@ pub struct LightweightKeyDetails {
     pub key: Vec<u8>,
 }
 
-#[derive(Debug, Clone, Insertable)]
+#[derive(Debug, Clone, Insertable, serde::Serialize, serde::Deserialize)]
 #[diesel(table_name = crate::db::schema::lightweight_key_details)]
+#[diesel(belongs_to(DeviceKey, foreign_key = device_key))]
 pub struct NewLightweightKeyDetails {
     pub device_key: i32,
     pub algorithm: CryptoAlgorithm,
@@ -261,7 +278,17 @@ pub struct NewLightweightKeyDetails {
 }
 
 // tls_key_details
-#[derive(Debug, Clone, Identifiable, Queryable, Selectable, Associations, AsChangeset)]
+#[derive(
+    Debug,
+    Clone,
+    Identifiable,
+    Queryable,
+    Selectable,
+    Associations,
+    AsChangeset,
+    serde::Serialize,
+    serde::Deserialize,
+)]
 #[diesel(table_name = crate::db::schema::tls_key_details)]
 #[diesel(belongs_to(DeviceKey, foreign_key = device_key))]
 pub struct TlsKeyDetails {
@@ -271,8 +298,9 @@ pub struct TlsKeyDetails {
     pub valid_to: NaiveDateTime,
 }
 
-#[derive(Debug, Clone, Insertable)]
+#[derive(Debug, Clone, Insertable, serde::Serialize, serde::Deserialize)]
 #[diesel(table_name = crate::db::schema::tls_key_details)]
+#[diesel(belongs_to(DeviceKey, foreign_key = device_key))]
 pub struct NewTlsKeyDetails {
     pub device_key: i32,
     pub valid_from: NaiveDateTime,
